--- a/videochat.html
+++ b/videochat.html
@@ -26,8 +26,10 @@
         </form>
         <form id="end-call" class="pure-form">
             <p>Currently in call with <span id="their-id">...</span></p>
-            <button href="#" class="pure-button pure-button-success" type="submit">End Call</button
+            <button href="#" class="pure-button pure-button-success" type="submit">End Call</button>
         </form>
+        <p>List: <div id="list">...</div></p>
+        <p>Log: <span id="debug">...</span></p>
     </div>
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
