--- a/videochat.html
+++ b/videochat.html
@@ -45,10 +45,10 @@
     <div id="map"></div>
     <script>
       function initMap() {
-        var gps = {lat: location[0], lng: location[1]};
+        var gps = {lat: parseFloat(location[0]), lng: parseFloat(location[1])};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoomLog: Latitude:3: 17,
-          center: here
+          zoomLog: 17,
+          center: gps
         });
         var marker = new google.maps.Marker({
           position: gps,
