Comment out google maps

--- a/videochat.html
+++ b/videochat.html
@@ -43,7 +43,7 @@
 
     <!-- Map area -->
     <div id="map"></div>
-    <script>
+    <!-- <script>
       function initMap() {
         var gps = {lat: parseFloat(location[0]), lng: parseFloat(location[1])};
         var map = new google.maps.Map(document.getElementById('map'), {
@@ -58,7 +58,7 @@
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9QOIcdcpHQ-CVg_2YCQ-We7J2Z9-nNnI&callback=initMap">
-    </script>
+    </script> -->
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
