--- a/videochat.html
+++ b/videochat.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Map area -->
-    <div id="map"></div>
+    <!-- <div id="map"></div> -->
     <!-- <script>
       function initMap() {
         var gps = {lat: parseFloat(location[0]), lng: parseFloat(location[1])};
