--- a/videochat.html
+++ b/videochat.html
@@ -37,15 +37,16 @@
         <p>List: <div id="list">...</div></p>
         
         <h5>Debug:</h3>
-        <ul id=debug type="disc">
+        <ul id="debug" type="disc">
         </ul>
+
     </div>
 
     <!-- Map area -->
-    <!-- <div id="map"></div> -->
-    <!-- <script>
+    <div id="map"></div>
+    <script>
       function initMap() {
-        var gps = {lat: parseFloat(location[0]), lng: parseFloat(location[1])};
+        var gps = {lat: parseFloat(theirLocation[0]), lng: parseFloat(theirLocation[1])};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoomLog: 17,
           center: gps
@@ -58,7 +59,7 @@
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9QOIcdcpHQ-CVg_2YCQ-We7J2Z9-nNnI&callback=initMap">
-    </script> -->
+    </script>
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
