--- a/videochat.html
+++ b/videochat.html
@@ -50,8 +50,7 @@
     <div id="map"></div>
     <script>
       function initMap() {
-        var gps = {lat: 35.610722, lng: 139.748028};
-        // var gps = {lat: parseFloat(theirLocation[0]), lng: parseFloat(theirLocation[1])};
+        var gps = {lat: parseFloat(theirLocation[0]), lng: parseFloat(theirLocation[1])};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 17,
           center: gps
