--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Material Design Lite</title>
+    <title>GIBARE</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -58,13 +58,39 @@
       margin-bottom: 40px;
       z-index: 900;
     }
+    #my-video {
+        margin-top: 15px;
+        width: 280px;
+        height: auto;
+        background-color: #eee;
+    }
+    #their-video {
+        width: 100%;
+        height: 75%;
+        max-height: 480px;
+        background-color: #eee;
+    }
+    #video-container {
+        padding: 25px;
+        text-align: center;
+    }
+    #end-call {
+        /* display: none; */
+    }
+    #my-id {
+        font-weight: bold;
+    }
+    #map {
+      height: 400px;
+      width: 100%;
+    }
     </style>
   </head>
   <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Home</span>
+          <span class="mdl-layout-title">Overview</span>
           <div class="mdl-layout-spacer"></div>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
             <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
@@ -117,7 +143,57 @@
         </nav>
       </div>
       <main class="mdl-layout__content mdl-color--grey-100">
-        <div class="mdl-grid demo-content">
+        <div class="mdl-grid mdl-shadow--2dp mdl-color--white">
+          <!-- Video area -->
+          <div class="mdl-cell mdl-cell--8-col" id="video-container">
+            <video id="their-video" autoplay></video>
+            <video id="my-video" muted="true" autoplay></video>
+          </div>
+
+          <!-- Steps -->
+          <div class="mdl-cell mdl-cell--4-col">
+            <h2>Video Chat</h2>
+            <p>Your id: <span id="my-id">...</span></p>
+            <p>Share this id with others so they can call you.</p>
+            <form id="make-call" class="pure-form">
+              <!-- Textfield with Floating Label -->
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="text" id="callto-id">
+                <label class="mdl-textfield__label" for="callto-id">Input call user ID...</label>
+              </div>
+              <!-- Accent-colored raised button with ripple -->
+              <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Call</button>
+            </form>
+            <form id="end-call" class="pure-form">
+              <p>Currently in call with <span id="their-id">...</span></p>
+              <!-- Accent-colored raised button with ripple -->
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">End Call</button>
+            </form>
+            <h5>List:</h5>
+            <ul class='mdl-list' id="peerList">
+            </ul>
+            <h5>Debug:</h5>
+              <ul id="debug" type="disc">
+              </ul>
+            </div>
+          </div>
+          <!-- Map area -->
+          <div id="map"></div>
+          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9QOIcdcpHQ-CVg_2YCQ-We7J2Z9-nNnI"></script>
+          <script type="text/javascript">
+          function initMap() {
+              var gps = {lat: Number(theirLocation[0]), lng: Number(theirLocation[1])};
+              var map = new google.maps.Map(document.getElementById('map'), {
+                  zoom: 17,
+                  center: gps
+              });
+              var marker = new google.maps.Marker({
+                  position: gps,
+                  map: map,
+                  animation: google.maps.Animation.BOUNCE
+              });
+          }
+          </script>
           <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
             <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
               <use xlink:href="#piechart" mask="url(#piemask)" />
@@ -246,5 +322,8 @@
       </svg>
       <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/dashboard/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">View Source</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
