--- a/videochat.html
+++ b/videochat.html
@@ -3,7 +3,7 @@
 <head lang="ja">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>SkyWay JS SDK Tutorial</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_skyway.css">
     <style>
       #map {
         height: 400px;
@@ -35,7 +35,7 @@
             <button href="#" class="pure-button pure-button-success" type="submit">End Call</button>
         </form>
         <p>List: <div id="list">...</div></p>
-        
+
         <h5>Debug:</h3>
         <ul id="debug" type="disc">
         </ul>
@@ -45,7 +45,7 @@
     <!-- Map area -->
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9QOIcdcpHQ-CVg_2YCQ-We7J2Z9-nNnI"></script>
-    <script type="text/javascript">   
+    <script type="text/javascript">
     function initMap() {
         var gps = {lat: Number(theirLocation[0]), lng: Number(theirLocation[1])};
         var map = new google.maps.Map(document.getElementById('map'), {
