--- a/index.html
+++ b/index.html
@@ -65,14 +65,22 @@ limitations under the License
   background-color: #eee;
 }
 #their-video {
-  width: 100%;
+  /* width: 100%;
   height: 75%;
-  max-height: 480px;
+  max-height: 480px; */
+  position: absolute;
+ 	top:0;
+ 	width: 100%;
+ 	height: 100%;
   background-color: #eee;
 }
 #video-container {
-  padding: 25px;
+  padding: 20px;
   text-align: center;
+  z-index: 5
+}
+#logger {
+  z-index: 10
 }
 #step1-error, #step2, #step3 {
   /* display: none; */
@@ -133,20 +141,16 @@ limitations under the License
         </div>
       </header>
       <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Inbox</a>
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Trash</a>
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Spam</a>
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Forums</a>
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Updates</a>
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Promos</a>
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Purchases</a>
-        <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
+        <a class="mdl-navigation__link" href="index.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Overview</a>
+        <a class="mdl-navigation__link" href="navigation.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">navigation</i>Navigation</a>
+        <a class="mdl-navigation__link" href="textchat.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">chat</i>Textchat</a>
+        <a class="mdl-navigation__link" href="videochat.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">videocam</i>Videochat</a>
         <div class="mdl-layout-spacer"></div>
         <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
       </nav>
     </div>
     <main class="mdl-layout__content mdl-color--grey-100">
+      <video id="their-video" autoplay></video>
       <div class="mdl-grid mdl-shadow--2dp mdl-color--white">
         <!-- Profile area -->
         <div class="mdl-cell mdl-cell--3-col" id="profile">
@@ -203,7 +207,7 @@ limitations under the License
         </div>
         <!-- Video area -->
         <div class="mdl-cell mdl-cell--7-col" id="video-container">
-          <h5 id="RealtimeClock"></h5>
+          <h3 id="RealtimeClock" ></h3>
           <script type="text/javascript">
           setInterval(function() {
             var nowTime = new Date();
@@ -213,13 +217,12 @@ limitations under the License
           }, 1000);
           </script>
           <!-- <video id="their-video" autoplay></video> -->
-          <video id="their-video" autoplay></video>
           <canvas id="display_canvas"></canvas>
-          <video id="my-video" muted="true" autoplay></video>
+          <!-- <video id="my-video" muted="true" autoplay></video> -->
         </div>
 
         <!-- Steps -->
-        <div class="mdl-cell mdl-cell--2-col">
+        <div class="mdl-cell mdl-cell--2-col" id="logger">
           <h2>Video Chat</h2>
           <div class="select">
             <label for="audioSource">Audio input source: </label><select id="audioSource"></select>
