--- a/navigation.html
+++ b/navigation.html
@@ -76,13 +76,34 @@ limitations under the License
   line-height: 30px;
   padding-left: 10px;
 }
+#navDistanceMatrix {
+  display: none;
+}
+
+.box {
+  position: absolute;
+  right: 30px;
+  top: 10px;
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  color: #5d627b;
+  background: white;
+  border-top: solid 5px #5d627b;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
+  z-index: 900;
+}
+.box p {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
 </style>
 </head>
 <body>
   <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
     <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Root Direction</span>
+        <span class="mdl-layout-title">Navigation</span>
         <div class="mdl-layout-spacer"></div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
           <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
@@ -140,9 +161,10 @@ limitations under the License
           </optgroup>
         </select>
       </div>
+      <div id="navDistanceMatrix" class="box"></div>
       <div id="navMap"></div>
       <script type="text/javascript">
-      var gps;
+      var dest;
       var jsonMetadata = localStorage.getItem("jsonMetadata");
       function initNavMap() {
         var directionsService = new google.maps.DirectionsService();
@@ -155,21 +177,24 @@ limitations under the License
         var navMap = new google.maps.Map(document.getElementById('navMap'), mapOptions);
         directionsDisplay.setMap(navMap);
 
+        var distanceMatrixService = new google.maps.DistanceMatrixService();
+
         var onChangeHandler = function() {
           calculateAndDisplayRoute(directionsService, directionsDisplay);
+          calculateAndDisplayTime(distanceMatrixService);
         };
         document.getElementById('departure').addEventListener('change', onChangeHandler);
         if (jsonMetadata!= null && jsonMetadata.latitude != null && jsonMetadata.longitude != null) {
-          gps = {lat: Number(jsonMetadata.latitude), lng: Number(jsonMetadata.longitude)};
+          dest = {lat: Number(jsonMetadata.latitude), lng: Number(jsonMetadata.longitude)};
         } else {
-          gps = tokyo;
+          dest = tokyo;
         }
       }
 
       function calculateAndDisplayRoute(directionsService, directionsDisplay) {
         directionsService.route({
           origin: document.getElementById('departure').value,
-          destination: gps,
+          destination: dest,
           travelMode: 'DRIVING',
           drivingOptions: {
             departureTime: new Date(Date.now()),
@@ -184,58 +209,88 @@ limitations under the License
           }
         });
       }
-      </script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASDWMeCqWAfzoFchLIYUE5QNwpUB6obWU&callback=initNavMap" async defer></script>
-    </main>
-  </div>
-  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
-    <defs>
-      <mask id="piemask" maskContentUnits="objectBoundingBox">
-        <circle cx=0.5 cy=0.5 r=0.49 fill="white" />
-        <circle cx=0.5 cy=0.5 r=0.40 fill="black" />
-      </mask>
-      <g id="piechart">
-        <circle cx=0.5 cy=0.5 r=0.5 />
-        <path d="M 0.5 0.5 0.5 0 A 0.5 0.5 0 0 1 0.95 0.28 z" stroke="none" fill="rgba(255, 255, 255, 0.75)" />
-      </g>
-    </defs>
-  </svg>
-  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 250" style="position: fixed; left: -1000px; height: -1000px;">
-    <defs>
-      <g id="chart">
-        <g id="Gridlines">
-          <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="27.3" x2="468.3" y2="27.3" />
-          <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="66.7" x2="468.3" y2="66.7" />
-          <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="105.3" x2="468.3" y2="105.3" />
-          <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="144.7" x2="468.3" y2="144.7" />
-          <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="184.3" x2="468.3" y2="184.3" />
+
+      function calculateAndDisplayTime(distanceMatrixService) {
+        distanceMatrixService.getDistanceMatrix(
+          {
+            origins: [document.getElementById('departure').value],
+            destinations: [dest],
+            travelMode: 'DRIVING',
+            drivingOptions: {
+              departureTime: new Date(Date.now()),
+              trafficModel: 'bestguess'
+            },
+            unitSystem: google.maps.UnitSystem.METRIC
+          }, function(response, status) {
+            if (status === 'OK') {
+              for (var i = 0; i < response.originAddresses.length; i++) {
+                var results = response.rows[i].elements;
+                for (var j = 0; j < results.length; j++) {
+                  $("#navDistanceMatrix").append($("<p>").html("Departure: " + response.originAddresses[i]));
+                  $("#navDistanceMatrix").append($("<p>").html("Destination: " + response.destinationAddresses[j]));
+                  $("#navDistanceMatrix").append($("<p>").html("Distance: " + results[j].distance.text));
+                  $("#navDistanceMatrix").append($("<p>").html("Duration: " + results[j].duration.text));
+                  $('#navDistanceMatrix').show();
+                }
+              }
+            } else {
+              window.alert('Directions request failed due to ' + status);
+            }
+          });
+        }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9QOIcdcpHQ-CVg_2YCQ-We7J2Z9-nNnI&callback=initNavMap" async defer></script>
+      </main>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
+      <defs>
+        <mask id="piemask" maskContentUnits="objectBoundingBox">
+          <circle cx=0.5 cy=0.5 r=0.49 fill="white" />
+          <circle cx=0.5 cy=0.5 r=0.40 fill="black" />
+        </mask>
+        <g id="piechart">
+          <circle cx=0.5 cy=0.5 r=0.5 />
+          <path d="M 0.5 0.5 0.5 0 A 0.5 0.5 0 0 1 0.95 0.28 z" stroke="none" fill="rgba(255, 255, 255, 0.75)" />
         </g>
-        <g id="Numbers">
-          <text transform="matrix(1 0 0 1 485 29.3333)" fill="#888888" font-family="'Roboto'" font-size="9">500</text>
-          <text transform="matrix(1 0 0 1 485 69)" fill="#888888" font-family="'Roboto'" font-size="9">400</text>
-          <text transform="matrix(1 0 0 1 485 109.3333)" fill="#888888" font-family="'Roboto'" font-size="9">300</text>
-          <text transform="matrix(1 0 0 1 485 149)" fill="#888888" font-family="'Roboto'" font-size="9">200</text>
-          <text transform="matrix(1 0 0 1 485 188.3333)" fill="#888888" font-family="'Roboto'" font-size="9">100</text>
-          <text transform="matrix(1 0 0 1 0 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">1</text>
-          <text transform="matrix(1 0 0 1 78 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">2</text>
-          <text transform="matrix(1 0 0 1 154.6667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">3</text>
-          <text transform="matrix(1 0 0 1 232.1667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">4</text>
-          <text transform="matrix(1 0 0 1 309 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">5</text>
-          <text transform="matrix(1 0 0 1 386.6667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">6</text>
-          <text transform="matrix(1 0 0 1 464.3333 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">7</text>
+      </defs>
+    </svg>
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 250" style="position: fixed; left: -1000px; height: -1000px;">
+      <defs>
+        <g id="chart">
+          <g id="Gridlines">
+            <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="27.3" x2="468.3" y2="27.3" />
+            <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="66.7" x2="468.3" y2="66.7" />
+            <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="105.3" x2="468.3" y2="105.3" />
+            <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="144.7" x2="468.3" y2="144.7" />
+            <line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="184.3" x2="468.3" y2="184.3" />
+          </g>
+          <g id="Numbers">
+            <text transform="matrix(1 0 0 1 485 29.3333)" fill="#888888" font-family="'Roboto'" font-size="9">500</text>
+            <text transform="matrix(1 0 0 1 485 69)" fill="#888888" font-family="'Roboto'" font-size="9">400</text>
+            <text transform="matrix(1 0 0 1 485 109.3333)" fill="#888888" font-family="'Roboto'" font-size="9">300</text>
+            <text transform="matrix(1 0 0 1 485 149)" fill="#888888" font-family="'Roboto'" font-size="9">200</text>
+            <text transform="matrix(1 0 0 1 485 188.3333)" fill="#888888" font-family="'Roboto'" font-size="9">100</text>
+            <text transform="matrix(1 0 0 1 0 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">1</text>
+            <text transform="matrix(1 0 0 1 78 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">2</text>
+            <text transform="matrix(1 0 0 1 154.6667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">3</text>
+            <text transform="matrix(1 0 0 1 232.1667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">4</text>
+            <text transform="matrix(1 0 0 1 309 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">5</text>
+            <text transform="matrix(1 0 0 1 386.6667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">6</text>
+            <text transform="matrix(1 0 0 1 464.3333 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">7</text>
+          </g>
+          <g id="Layer_5">
+            <polygon opacity="0.36" stroke-miterlimit="10" points="0,223.3 48,138.5 154.7,169 211,88.5
+            294.5,80.5 380,165.2 437,75.5 469.5,223.3 	"/>
+          </g>
+          <g id="Layer_4">
+            <polygon stroke-miterlimit="10" points="469.3,222.7 1,222.7 48.7,166.7 155.7,188.3 212,132.7
+            296.7,128 380.7,184.3 436.7,125 	"/>
+          </g>
         </g>
-        <g id="Layer_5">
-          <polygon opacity="0.36" stroke-miterlimit="10" points="0,223.3 48,138.5 154.7,169 211,88.5
-          294.5,80.5 380,165.2 437,75.5 469.5,223.3 	"/>
-        </g>
-        <g id="Layer_4">
-          <polygon stroke-miterlimit="10" points="469.3,222.7 1,222.7 48.7,166.7 155.7,188.3 212,132.7
-          296.7,128 380.7,184.3 436.7,125 	"/>
-        </g>
-      </g>
-    </defs>
-  </svg>
-  <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/dashboard/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">View Source</a>
-  <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-</body>
-</html>
+      </defs>
+    </svg>
+    <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/dashboard/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">View Source</a>
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  </body>
+  </html>
