--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ limitations under the License
   width: 280px;
   height: auto;
   background-color: #eee;
+  display: none;
 }
 #their-video {
   /* width: 100%;
@@ -218,8 +219,8 @@ limitations under the License
           }, 1000);
           </script>
           <!-- <video id="their-video" autoplay></video> -->
-          <canvas id="display_canvas"></canvas>
-          <!-- <video id="my-video" muted="true" autoplay></video> -->
+          <!-- <canvas id="display_canvas"></canvas> -->
+          <video id="my-video" muted="true" autoplay></video>
         </div>
 
         <!-- Steps -->
