--- a/index.html
+++ b/index.html
@@ -158,14 +158,10 @@ limitations under the License
         </div>
       </header>
       <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-        <a class="mdl-navigation__link" href="index.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Overview</a>
-        <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>none</a>
+        <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Overview</a>
         <a class="mdl-navigation__link" href="#navigation"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">navigation</i>Navigation</a>
-        <a class="mdl-navigation__link" href="navigation.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">navigation</i>_Navigation</a>
         <a class="mdl-navigation__link" href="#weather"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">wb_sunny</i>Weather</a>
-        <a class="mdl-navigation__link" href="weather.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">wb_sunny</i>_Weather</a>
         <a class="mdl-navigation__link" href="#control"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">control_camera</i>Control</a>
-        <a class="mdl-navigation__link" href="#test"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">chat</i>test</a>
         <a class="mdl-navigation__link" href="textchat.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">chat</i>Textchat</a>
         <a class="mdl-navigation__link" href="videochat.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">videocam</i>Videochat</a>
         <div class="mdl-layout-spacer"></div>
@@ -233,7 +229,19 @@ limitations under the License
           </div>
           <!-- Video area -->
           <div class="mdl-cell mdl-cell--7-col" id="video-container">
-            <h3 id="realtimeClock" ></h3>
+      <style type="text/css">
+    #realtimeClock {
+      font-size: 24px;
+      display: inline-block;
+    }
+    #weather {
+      font-size: 32px;
+      font-weight: bold;
+      display: inline-block;
+    }
+  </style>
+    <div class="jumbotron"">
+    <div id="realtimeClock" class="text-primary text-center"></div>
             <script type="text/javascript">
               setInterval(function() {
                 var nowTime = new Date();
@@ -242,6 +250,44 @@ limitations under the License
                 document.getElementById("realtimeClock").innerHTML = date + "<br>" + time;
               }, 1000);
             </script>
+    <div id="weather" class="text-primary text-center">
+      <div class="weather-info">
+        <i class="wi" id="icon"></i>
+        <span id="temp"></span><i class="wi wi-celsius"></i>
+      </div>
+      <ul class="list-inline">
+        <li id="name" class="list-inline-item"></li>
+        <li id="desc" class="list-inline-item"></li>
+      </ul>
+    </div>
+  </div>
+  <script type="text/javascript">
+    $(function () {
+      var API_KEY = 'f31ed1d2bcde371b7f7c769c07491313';
+      var city = 'Tokyo';
+      var url = 'https://api.openweathermap.org/data/2.5/weather?q=' + city + ',jp&units=metric&APPID=' + API_KEY;
+      $.getJSON(url, function(data) {
+        console.log(data);
+        if (!data.cod || data.cod != 200) {
+          return;
+        }
+
+        $("#desc").text(data.weather[0].description);
+        $("#temp").text(data.main.temp);
+        $("#name").text(data.name);
+
+        var id = data.weather[0].id;
+        var unixTime = Math.floor((new Date()).getTime() / 1000);
+        if (data.sys.sunrise <= unixTime && unixTime <= data.sys.sunset) {
+          $("#icon").addClass("wi-owm-day-" + id);
+        } else {
+          $("#icon").addClass("wi-owm-night-" + id);
+        }
+
+        $("#weather").show();
+      });
+    });
+  </script>
             <!-- <video id="their-video" autoplay></video> -->
             <!-- <canvas id="display_canvas"></canvas> -->
             <video id="my-video" muted="true" autoplay></video>
@@ -293,6 +339,8 @@ limitations under the License
             </ul>
             <h5>Debug:</h5>
             <div id="debug"></div>
+            <h5>Messages:</h5>
+            <div id="messages"></div>
           </ul>
         </div>
       </div>
@@ -494,15 +542,33 @@ limitations under the License
 
 <section id="control">
   <style type="text/css">
-    #display_canvas {
+  #display_canvas {
     position: absolute;
     top:0;
     width: 100%;
     height: 100%;
     background-color: #eee;
+    z-index: -5;
+  }
+  #control_buttons {
+    padding: 10px;
   }
   </style>
   <canvas id="display_canvas"></canvas>
+  <div id="control_buttons">
+  <button id="left_button" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+  <i class="material-icons">arrow_back</i>
+  </button>
+  <button id="down_button" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+  <i class="material-icons">arrow_downward</i>
+  </button>
+  <button id="up_button" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+  <i class="material-icons">arrow_upward</i>
+  </button>
+  <button id="right_button" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+  <i class="material-icons">arrow_forward</i>
+  </button>
+  </div>
 </section>
 </main>
 </div>
