--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ limitations under the License
         width: 100%;
         height: 100%;
         background-color: #eee;
+        display: none;
     }
 
     #display_canvas {
@@ -183,10 +184,10 @@ limitations under the License
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <main class="mdl-layout__content mdl-color--grey-100">
+            <canvas id="display_canvas"></canvas>
             <section id="overview">
                 <video id="my-video" muted="true" autoplay></video>
                 <video id="their-video" autoplay></video>
-                <!-- <canvas id="display_canvas"></canvas> -->
                 <div class="mdl-grid mdl-shadow--2dp mdl-color--white">
                     <!-- Profile area -->
                     <div class="mdl-cell mdl-cell--3-col" id="profile">
