--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@ limitations under the License
         color: #000;
         text-align: center;
         z-index: 10
+        display: none;
     }
 
     #step1-error,
     #step2,
     #step3 {
-        /*display: none;*/
+        display: none;
     }
 
     #my-id {
