--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ limitations under the License
         background-color: rgba(255, 255, 255, 0.2);
         color: #000;
         text-align: center;
-        z-index: 10
-        display: none;
+        z-index: 10;
+        /*display: none;*/
     }
 
     #step1-error,
@@ -389,7 +389,7 @@ limitations under the License
                     </div>
                     <!-- Steps -->
                     <div class="mdl-cell mdl-cell--2-col" id="logger">
-                        <h2>Debug</h2>
+                        <!-- <h2>Debug</h2> -->
                         <div class="mdl-textfield mdl-js-textfield">
                             <label for="audioSource">Audio input source: </label>
                             <select id="audioSource" class="mdl-textfield__input"></select>
@@ -428,10 +428,10 @@ limitations under the License
                         <h5>List:</h5>
                         <ul class='demo-list-icon mdl-list' id="peerList">
                         </ul>
-                        <h5>Debug:</h5>
+<!--                         <h5>Debug:</h5>
                         <div id="debug"></div>
                         <h5>Messages:</h5>
-                        <div id="messages"></div>
+                        <div id="messages"></div> -->
                     </div>
                 </div>
             </section>
